--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/search.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/search.html
@@ -7,17 +7,8 @@
 <body>
 <a href="/category"><h3>Category List</h3></a>
 
-<a href="/create-blog">Create new blog</a>
-
-
-
-<a>
-    <form action="/search" method="get">
-        Search by name blog:
-        <input id="name" name="name" />
-        <input type="submit" value="Search"/>
-    </form><br/>
-</a>
+<a href="/">Blog List</a>
+<p th:text="${name}"></p>
 <h1>Blogs</h1>
 <table border="1">
     <tr>
@@ -43,13 +34,11 @@
         </tr>
     </th:block>
 </table>
-<form action="/sort" method="get">
-    <input type="submit" value="Sort">
-</form>
+
 <div>
-    <a th:href="@{'/sort'(page=${blogs.number - 1})}" th:if="${blogs.hasPrevious()}">Previous</a>
+    <a th:href="@{'/search?name='+${name}+'&page='+${blogs.number - 1}}" th:if="${blogs.hasPrevious()}">Previous</a>
     <span th:text="${blogs.number + 1}"></span>/<span th:text="${blogs.totalPages}"></span>
-    <a th:href="@{'/sort'(page=${blogs.number + 1})}" th:if="${blogs.hasNext()}">Next</a>
+    <a th:href="@{'/search?name='+${name}+'&page='+${blogs.number + 1}}" th:if="${blogs.hasNext()}">Next</a>
 </div>
 
 </body>
