--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/list.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/list.html
@@ -12,7 +12,7 @@
 
 
 <a>
-<form action="/search" method="post">
+<form>
     Search by name blog:
     <input id="name" name="name" />
     <input type="submit" value="Search"/>
@@ -43,13 +43,13 @@
         </tr>
     </th:block>
 </table>
-<form action="/sort" method="post">
+<form action="/sort" method="get">
     <input type="submit" value="Sort">
 </form>
 <div>
-    <a th:href="@{'/customers'(page=${blogs.number - 1})}" th:if="${blogs.hasPrevious()}">Previous</a>
+    <a th:href="@{/(name=${name}, page=${blogs.number - 1})}" th:if="${blogs.hasPrevious()}">Previous</a>
     <span th:text="${blogs.number + 1}"></span>/<span th:text="${blogs.totalPages}"></span>
-    <a th:href="@{'/customers'(page=${blogs.number + 1})}" th:if="${blogs.hasNext()}">Next</a>
+    <a th:href="@{/(name=${name}, page=${blogs.number + 1})}" th:if="${blogs.hasNext()}">Next</a>
 </div>
 
 </body>
