--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/search.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/search.html
@@ -5,11 +5,7 @@
     <title>Blogs</title>
 </head>
 <body>
-<a href="/category"><h3>Category List</h3></a>
 
-<a href="/">Blog List</a>
-<p th:text="${name}"></p>
-<h1>Blogs</h1>
 <table border="1">
     <tr>
         <th>Name Blog</th>
@@ -34,11 +30,15 @@
         </tr>
     </th:block>
 </table>
+<a href="/category"><h3>Category List</h3></a>
+
+<a href="/"><h3>Blog List</h3></a>
+
 
 <div>
-    <a th:href="@{'/search?name='+${name}+'&page='+${blogs.number - 1}}" th:if="${blogs.hasPrevious()}">Previous</a>
+    <a th:href="@{'/search'(search=${search}, input=${input}, page=${blogs.number - 1}, sort=${sort})}" th:if="${blogs.hasPrevious()}">Previous</a>
     <span th:text="${blogs.number + 1}"></span>/<span th:text="${blogs.totalPages}"></span>
-    <a th:href="@{'/search?name='+${name}+'&page='+${blogs.number + 1}}" th:if="${blogs.hasNext()}">Next</a>
+    <a th:href="@{'/search'(search=${search}, input=${input}, page=${blogs.number + 1}, sort=${sort})}" th:if="${blogs.hasNext()}">Next</a>
 </div>
 
 </body>
