--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/list.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/list.html
@@ -5,19 +5,23 @@
     <title>Blogs</title>
 </head>
 <body>
-<a href="/category"><h3>Category List</h3></a>
 
-<a href="/create-blog">Create new blog</a>
-
-
-
-<a>
-<form>
-    Search by name blog:
-    <input id="name" name="name" />
+<form method="get" action="/search">
+    Search By:
+    <select name="search">
+        <option value="name">Name Blog</option>
+        <option value="summary">Summary</option>
+        <option value="date">Date Post</option>
+    </select>
+    <input name="input"/>
     <input type="submit" value="Search"/>
-</form><br/>
-</a>
+</form>
+<form method="get" action="/search-all">
+    Search All:
+    <input name="value1" placeholder="Name Blog"/>
+    <input name="value2" placeholder="Summary"/>
+    <input type="submit" value="Search">
+</form>
 <h1>Blogs</h1>
 <table border="1">
     <tr>
@@ -46,6 +50,9 @@
 <form action="/sort" method="get">
     <input type="submit" value="Sort">
 </form>
+<a href="/category"><h3>Category List</h3></a>
+
+<a href="/create-blog"><h3>Create new blog</h3></a>
 <div>
     <a th:href="@{/(name=${name}, page=${blogs.number - 1})}" th:if="${blogs.hasPrevious()}">Previous</a>
     <span th:text="${blogs.number + 1}"></span>/<span th:text="${blogs.totalPages}"></span>
