--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/create.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/create.html
@@ -27,6 +27,10 @@
             <td><textarea th:field="*{content}" style="height: 300px; width: 700px"/></td>
         </tr>
         <tr>
+            <td>Page Number</td>
+            <td><textarea th:field="*{pageNumber}" style="height: 300px; width: 700px"/></td>
+        </tr>
+        <tr>
             <td>Category:</td>
             <td>
                 <select th:field="*{category}">
