--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/create.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/create.html
@@ -28,7 +28,7 @@
         </tr>
         <tr>
             <td>Page Number</td>
-            <td><textarea th:field="*{pageNumber}" style="height: 300px; width: 700px"/></td>
+            <td><input th:field="*{pageNumber}" /></td>
         </tr>
         <tr>
             <td>Category:</td>
