--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/searchall.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/searchall.html
@@ -34,9 +34,9 @@
 
 
 <div>
-    <a th:href="@{'/search-all'(value1=${value1}, value2=${value2},value3=${value3}, value4=${value4}, page=${blogs.number - 1}, sort=${sort})}" th:if="${blogs.hasPrevious()}">Previous</a>
+    <a th:href="@{'/search-all'(value1=${value1}, value2=${value2},value3=${value3}, value4=${value4}, value5=${value5}, page=${blogs.number - 1}, sort=${sort})}" th:if="${blogs.hasPrevious()}">Previous</a>
     <span th:text="${blogs.number + 1}"></span>/<span th:text="${blogs.totalPages}"></span>
-    <a th:href="@{'/search-all'(value1=${value1}, value2=${value2}, value3=${value3}, value4=${value4}, page=${blogs.number + 1}, sort=${sort})}" th:if="${blogs.hasNext()}">Next</a>
+    <a th:href="@{'/search-all'(value1=${value1}, value2=${value2}, value3=${value3}, value4=${value4}, value5=${value5}, page=${blogs.number + 1}, sort=${sort})}" th:if="${blogs.hasNext()}">Next</a>
 </div>
 
 </body>
