--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/list.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/list.html
@@ -23,6 +23,7 @@
     <input name="value3" placeholder="Page Number Min"/>
     <input name="value4" placeholder="Page Number Max"/>
     <select name="value5">
+        <option th:value="-1">All</option>
         <option th:each="category : ${categories}"
                 th:value="${category.id}"
                 th:text="${category.nameCategory}"
