--- a/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/view.html
+++ b/Module2_Java_Web/B8_Spring_Data_Repository/BaiTap/Blog2/src/main/resources/templates/blog/view.html
@@ -16,15 +16,15 @@
     <table>
         <tr>
             <td>Name Blog:</td>
-            <td><input type="text" th:field="*{nameBlog}"/></td>
+            <td><input disabled type="text" th:field="*{nameBlog}"/></td>
         </tr>
         <tr>
             <td>Summary:</td>
-            <td><input type="text" th:field="*{quickView}"/></td>
+            <td><input disabled type="text" th:field="*{quickView}"/></td>
         </tr>
         <tr>
             <td>Content Blog:</td>
-            <td><textarea th:field="*{content}"/></td>
+            <td><textarea disabled th:field="*{content}"/></td>
         </tr>
         <tr>
             <td>Category:</td>
